Roots pop-ups now work properly on firefox and ie. Fixed popups resizing poorly because of animation lag.

--- a/apps/pinpoint/static/pinpoint/themes/roots/roots.css
+++ b/apps/pinpoint/static/pinpoint/themes/roots/roots.css
@@ -46,9 +46,25 @@ body {
     text-transform: uppercase;
 }
 
+.previewContainer .table {
+    display: table;
+    table-layout: fixed;
+    margin-bottom: 0;
+}
+
+.previewContainer .row {
+    display: table-row;
+    width: 100%;
+}
+.previewContainer .row:before,
+.previewContainer .row:after {
+    content: none;
+    margin: 0;
+}
+
 .previewContainer .content {
     padding-top: 60px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
     border: none;
     max-width: 900px;
 }
